# Python-tools

./: .gitignore  README.md
BackOffice/backoffice/: commission.csv  commissions.py  cv_team.py  factura.py  factura_copy.py  output.txt
BackOffice/backoffice/teamcv/: .env  poderosas_code.csv  sona_code.csv
Dermalife/: .gitignore  listado_sku.csv  pyproject.toml  resultado2_sku.csv
Dermalife/HGI/: .env  compare_sku_sync.py  descargar_productos.py  hgi_inventory4.py  productos_publicados.csv  sync_result.csv
Dermalife/code_backup/: listado_sku.csv
Dermalife/dermalife/: listado_sku.csv  resultado2_sku.csv
Dermalife/dermalife/featured_products/: featured_products.py  modified_products.csv  wc-product-export-31-3-2025-1743477757814.csv
Recompra_app/: pyproject.toml  rxconfig.py
Recompra_app/Recompra_app/: Recompra_app.py  __init__.py  data.py  navigation.py  template.py
Recompra_app/Recompra_app/pages/: __init__.py  index.py  team.py  tools.py
Recompra_app/tests/: __init__.py
Recompra_local/recompra_local/: .env  check_recompra2.py
Recompra_web/: README.md  form_data.db  pyproject.toml  rxconfig.py
Recompra_web/Recompra/: Recompra.py  login.py
Recompra_web_app/: pyproject.toml  rxconfig.py
Recompra_web_app/Recompra_web_app/: .env  Recompra_web_app.py  login.py
Transcript/: pyproject.toml
Transcript/transcript/: AUDIO-2024-08-08-07-37-20.m4a  transcribir_audio.py
Web_Scrapping/: Dockerfile  app.py
app_1/: pyproject.toml  rxconfig.py
app_1/app_1/: login.py
hangman/: hangman_refactored.py
reflex-examples/form-designer/: pyproject.toml
reflex-examples/numbers_app/: calc.py  pyproject.toml  rxconfig.py
reflex-examples/numbers_app/numbers_app/: display_page.py  numbers_app.py  numbers_app2.py
twitter/: pyproject.toml  reflex.db
twitter/alembic/versions/: b15b35b86d21_.py
twitter/twitter/: db_model.py
twitter/twitter/layouts/: auth.py
twitter/twitter/pages/: signup.py
twitter/twitter/state/: auth.py
twitter2/: pyproject.toml  rxconfig.py
twitter2/app_recompra/: pyproject.toml
twitter2/app_recompra/app_recompra/: app_recompra.py
youtube_downloader/: pyproject.toml  youtube_downloader.py
