[tool.poetry]
name = "recompra-web-app"
version = "0.1.0"
description = ""
authors = ["jduque1989 <67889006+jduque1989@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.5.4"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
requests = "^2.31.0"
bs4 = "^0.0.2"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
